sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() {
^AlgInsertionSort:2: error: expected class or object definition
def insertionSort() {
^AlgInsertionSort:5: error: Missing closing brace `}' assumed here
var i:Int=0
^AlgInsertionSort:5: error: expected class or object definition
var i:Int=0
^AlgInsertionSort:6: error: expected class or object definition
var j:Int=0
^AlgInsertionSort:7: error: expected class or object definition
var n:Int=getNombreValeurs()
^AlgInsertionSort:8: error: expected class or object definition
for (i <- 1 to lgr-1){
^AlgInsertionSort:12: error: Missing closing brace `}' assumed here
 } 
 ^